# Class_Sprint_M02_urvi

./: README.md  notes-1d-data.md  notes-1d-multi-method.md  notes-2d-data.md  notes-digits-data.md  pyproject.toml  run.sh
workflow/: Final_1d.py  Final_2d.py  Final_DD.py  Final_MM.py  US_clean_1d.ipynb  US_clean_2d.ipynb  US_clean_MultiMethod.ipynb
