[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viz-challenge"
version = "0.1.0"
description = "Visualizations for 1D, 2D, MultiMethod and digits t-SNE."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "scikit-learn>=1.3"
]

[tool.setuptools]
packages = []